# nixfiles

./: README.md  common.nix  configuration.nix  flake.nix  hardware-configuration.nix  shadowsocks.nix  update-chromium-extensions.sh  v2ray.nix
modules/: agenix.nix  android.nix  anki-mcp-server.nix  apollo-air1-exporter.nix  bergamot.nix  bergamot.patch  bfq.nix  caps.patch  chromium-extensions.json  cloud-mdir-sync.nix  common-home-config.nix  common-home.nix  common.nix  crispasr.nix  deadbeef-statusnotifier-plugin.nix  default-applications.nix  desktop.nix  emacs-home.nix  emacs-package.nix  emacs-tramp-rpc-server.nix  emacs.nix  famulus.nix  firefox-devtools-mcp.nix  font-freezing.nix  for-all-home-users.nix  fuzzy-matcher.nix  fzf-native.nix  hosts.nix  ical2org.nix  init.el  interactive-init.zsh  iosevka.nix  kde.nix  keys.patch  kwallet-secrets.nix  llama-cpp.nix  marian.nix  marian.patch  mc.ini  mcptools.nix  (+67 more)
modules/emacs/fuzzy-matcher/: Cargo.toml
modules/emacs/fuzzy-matcher/src/: lib.rs
resources/: face.icon
secrets/: anki.age  continuwuity.age  coturn.age  github.age  grafana-db.age  grafana.age  hans.age  iodine.age  kropki.age  kurnevsky-acer.age  kurnevsky-digitalocean.age  kurnevsky-evo.age  kurnevsky-pc.age  kurnevsky-pinenote.age  kurnevsky-pinephone-pro.age  kurnevsky-vps.age  livekit-turn.age  livekit.age  mautrix-whatsapp.age  miniflux.age  motion-xmpp-recipients.age  motion-xmpp.age  motion.age  oauth2-proxy.age  parents-acer.age  pocket-id.age  prometheus-wakapi.age  prosody-turn.age  rustic.age  scrutiny-collector.age  scrutiny.age  (+31 more)
(+110 files in other folders)
