[package]
name = "fuzzy-matcher"
version = "0.0.1"
authors = ["Evgeny Kurnevsky <kurnevsky@gmail.com>"]
license = "GPL-3.0+"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "fuzzy_matcher_el"
crate-type = ["cdylib"]

[dependencies]
emacs = { git = "https://github.com/kurnevsky/emacs-module-rs.git", rev = "297bdd761b3c827d9387708330f3cef62edd7be8" }
nucleo-matcher = "0.3"
lazy_static = "1.5"

[profile.release]
opt-level = 3
lto = true
debug = false
panic = "abort"
codegen-units = 1
